recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:10: error: not found: value legngth
  avance(legngth);
         ^Tree:11: error: not found: value agnle
  tree(steps-1, length*shrink, agnle, shrink);
                               ^